...
    // MARK: - Public Methods

    func setIsLiked(_ isLiked: Bool) {
        let likeImage = UIImage(resource: isLiked ? .likeButtonOn : .likeButtonOff)
            .withRenderingMode(.alwaysOriginal)
        likeButton.setImage(likeImage, for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }

    // MARK: - Private Methods

    private func setupView() {
        backgroundColor = .clear
...
