...
        button.titleLabel?.font = .boldSystemFont(ofSize: Constants.buttonFontSize)
        button.tintColor = UIColor(resource: .ypBlack)
        button.backgroundColor = .white
        button.layer.cornerRadius = Constants.buttonCornerRadius
        button.layer.masksToBounds = true
        button.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
        button.accessibilityIdentifier = "authenticate button"
        return button
    }()

    // MARK: - Lifecycle

    override func viewDidLoad() {
...
